--- a/inst/notebooks/03-Interactive-Maps.Rmd
+++ b/inst/notebooks/03-Interactive-Maps.Rmd
@@ -274,6 +274,37 @@ l %>%
 
 ## Projections 02
 
+```{r}
+spdf <- rmapshaper::ms_simplify(albersusa::usa_composite())
+pal <- colorNumeric(palette = "Blues", domain = spdf@data$pop_2014)
+crs.laea <- leafletCRS(
+  crsClass="L.Proj.CRS", code='EPSG:2163',
+  proj4def='+proj=laea +lat_0=45 +lon_0=-100 +x_0=0 +y_0=0 +a=6370997 +b=6370997 +units=m +no_defs',
+  resolutions = c(65536, 32768, 16384, 8192, 4096, 2048,1024, 512, 256, 128))
+
+l <- leaflet(
+  options= leafletOptions(
+    worldCopyJump = FALSE, crs=crs.laea, attributionControl = FALSE)) %>%
+  addPolygons(
+    data=spdf, label=~stringr::str_c(
+      name, ' ', formatC(pop_2014, big.mark = ',', format='d')),
+    labelOptions= labelOptions(direction = 'auto'),
+    weight = 1, color = "#000000",
+    fillColor=~pal(pop_2014), fillOpacity=0.7,
+    highlightOptions = highlightOptions(
+      color='#ff0000', opacity = 1, weight = 2, fillOpacity = 1,
+      bringToFront = TRUE, sendToBack = TRUE))
+```
+
+
+
+```{r , echo=FALSE, fig.width=10, fig.height=6, fig.align='center'}
+l %>%
+  setView(10,0,0.5) %>% setMapWidgetStyle() %>%
+  frameWidget()
+```
+
+
 ## `leaflet.extras`
 
 ## `leaflet` + `crosstalk`
